# zettarium

./: .gitignore  20250605T145029.md  20250609T094637.md  Cargo.toml  LICENSE  README.md  diesel.toml
migrations/2025-06-08-192814_create_zettels/: down.sql  up.sql
migrations/2025-06-08-193006_create_tags/: up.sql
migrations/2025-06-08-193115_create_zettel_tags/: down.sql  up.sql
src/: cli.rs  lib.rs  main.rs  schema.rs
src/config/: config.rs
src/error/: mod.rs  zettarium_error.rs
src/handler/: zettel.rs
src/markdown/: mod.rs  parser.rs  writer.rs
src/model/: markdown.rs  mod.rs  tag.rs  zettel.rs  zettel_tag.rs
src/presenter/: finder.rs  markdown.rs  mod.rs  zettel.rs
src/store/: db.rs  mod.rs  tag.rs  zettel.rs  zettel_tag.rs
src/validate/: tag.rs
