[package]
name = "zettarium"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = {version = "0.4.41", features = ["serde"]}
clap = {version = "4.5.39", features = ["derive"]}
diesel = {version = "2.2.10", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "chrono"]}
dotenvy = "0.15.7"
serde = {version = "1.0.219", features = ["derive"]}
serde_yaml = "0.9.34"
thiserror = "2.0.12"
diesel-derive-enum = { version = "2.1.0", features = ["sqlite"] }
regex = "1.11.1"
prettytable = "0.10.0"
termimad = "0.33.0"
etcetera = "0.10.0"
config = "0.15.11"
